# terminal-kanban

./: .env.example  .gitignore  README.md  pyproject.toml
src/: board.py  cli.py  main.py  models.py  storage.py  theme.py
