[tool.poetry]
name = "terminal-kanban"
version = "0.1.0"
description = "A terminal-based Kanban task management application."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"  # For command-line interface
pytz = "^2021.1"  # For handling time zones and dates

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"